--- a/scss/page/_mobile_page_dish.scss
+++ b/scss/page/_mobile_page_dish.scss
@@ -3,7 +3,11 @@
         .card-dish:hover .checked-dish {
             padding: 15px 15px;
           }
+         & .card-dish:hover .checked-dish {
+              padding: 15px 15px;
+        }
     }
+
 
     #header {
         & .logo p {
